--- a/.travis.yml
+++ b/.travis.yml
@@ -3,3 +3,15 @@ services:
 language: node_js
 node_js:
   - 6
+ notifications:
+  webhooks:
+    urls:
+      - https://zeus.ci/hooks/fb69c7b8-1e9d-11e9-b5e8-0a580a28042e/public/provider/travis/webhook
+    on_success: always
+    on_failure: always
+    on_start: always
+    on_cancel: always
+    on_error: always
+after_script:
+  - npm install -g @zeus-ci/cli
+  - zeus upload -t "mime/type" path/to/artifact
